# dogma_module_c

./: .gitignore  CMakeLists.txt  Makefile  README.md  dogma.i  dogma.py  dogma_module.c  dogma_module.h  dogma_test.py  dogma_types.py
