cmake_minimum_required(VERSION 3.3)
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib")

INCLUDE(FindPkgConfig)
pkg_check_modules (PYTHON3   python-3.4)
INCLUDE_DIRECTORIES(${PYTHON3_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
LINK_DIRECTORIES(${PYTHON3_LIBRARY_DIRS})

FIND_PATH(DOGMA_INCLUDE_PATH dogma.h
        /usr/include
        /usr/local/include)
INCLUDE_DIRECTORIES(${DOGMA_INCLUDE_PATH})
LINK_DIRECTORIES(/usr/local/lib/)


SET(CMAKE_SWIG_FLAGS "")

#SET_SOURCE_FILES_PROPERTIES(dogma.i PROPERTIES CPLUSPLUS OFF)
SWIG_ADD_MODULE(dogma python dogma.i dogma_module.c)
SWIG_LINK_LIBRARIES(dogma dogma ${PYTHON3_LIBRARIES})
